src/generators/snapshots/moon_cram__generators__generator__tests__create__cram__equal_output.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test
  $ the command
  the output

