src/generators/snapshots/moon_cram__generators__generator__tests__create__cram__multiline_command.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test
  $ echo \
  > something
  the output

